시큐리티진행중

--- a/src/main/resources/static/amend_info_modal/report_bell.html
+++ b/src/main/resources/static/amend_info_modal/report_bell.html
@@ -16,10 +16,10 @@
             <div class="report_container_header_title">비상벨 정보 수정</div>
         </div>
 
-        <div class="report_container_body">
+        <div class="report_container_body" style="margin-top : 10px;">
 
-            <div class="report_container_body_category">남자 화장실 비상벨</div>
-            <div class="report_container_body_choice">
+            <div class="report_container_body_category" style="margin-top : 10px; margin-bottom : 10px;">남자 화장실 비상벨</div>
+            <div class="report_container_body_choice" style="margin-top : 10px; margin-bottom : 10px;">
                 <div class="report_container_body_choice_radio">
                     <input type="radio" id="man_bell_option_yes" name="bell" value="manBellYes">
                     <label for="man_bell_option_yes">비상벨이 있음</label>
@@ -30,8 +30,8 @@
                 </div>
             </div>
 
-            <div class="report_container_body_category">여자 화장실 비상벨</div>
-            <div class="report_container_body_choice">
+            <div class="report_container_body_category" style="margin-top : 10px; margin-bottom : 10px;">여자 화장실 비상벨</div>
+            <div class="report_container_body_choice" style="margin-top : 10px; margin-bottom : 10px;">
                 <div class="report_container_body_choice_radio">
                     <input type="radio" id="woman_bell_option_yes" name="bell" value="womanBellYes">
                     <label for="woman_bell_option_yes">비상벨이 있음</label>
@@ -42,8 +42,8 @@
                 </div>
             </div>
 
-            <div class="report_container_body_category">장애인 화장실 비상벨</div>
-            <div class="report_container_body_choice">
+            <div class="report_container_body_category" style="margin-top : 10px; margin-bottom : 10px;">장애인 화장실 비상벨</div>
+            <div class="report_container_body_choice" style="margin-top : 10px; margin-bottom : 10px;">
                 <div class="report_container_body_choice_radio">
                     <input type="radio" id="disabled_bell_yes" name="bell" value="disabledBellYes">
                     <label for="disabled_bell_yes">비상벨이 있음</label>
