jwt 시큐리티 끝

--- a/src/main/resources/static/amend_info_modal/report_location.html
+++ b/src/main/resources/static/amend_info_modal/report_location.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/report_modal.css">
+    <link rel="stylesheet" href="/static/styles/report_modal.css">
     <title>장소명 및 위치</title>
 </head>
 <body>
