--- a/src/main/resources/static/amend_info_modal/report_disabled.html
+++ b/src/main/resources/static/amend_info_modal/report_disabled.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/report_modal.css">
+    <link rel="stylesheet" href="/static/styles/report_modal.css">
     <title>장애인 화장실 정보 수정</title>
 </head>
 
